init for rabbitmq proba